--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "core-js": "2.4.0",
     "es-module-loader": "1.0.0",
     "font-awesome": "4.6.3",
+    "highcharts": "^6.0.2",
     "jquery": "3.0.0",
     "moment": "2.15.0",
     "ng2-bootstrap": "1.1.5",
